# Windows-notice-to-ntfy

./: .gitignore  FORWARDER.md  Install-NtfyRelay.ps1  README.md  Run-All.cmd  Run-NtfyRelay.cmd  Run-WindowsNotificationForwarder.cmd  Send-TestWindowsNotification.cmd  Send-TestWindowsNotification.ps1  Start-NtfyRelay.ps1  Start-WindowsNotificationForwarder.ps1  Stop-All.cmd  Test-NtfyRelay.ps1  config.example.json  pyproject.toml  requirements.txt
windows_notice_to_ntfy/: cli.py  config.py  listener.py  logging_utils.py  relay.py  toast_test.py
